Test: Add unit tests for DeepLinkRepositoryImpl
-   Added `DeepLinkRepositoryTest.kt` to provide unit tests for the `generateDeepLink` function in `DeepLinkRepositoryImpl`.
-   Ensures correct URL construction with different parameters.
-   Added JUnit4 to execute tests.
-   Added `junitKtx` dependency.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ gson = "2.10.1"
 hiltAndroid = "2.51.1"
 ksp = "2.1.0-1.0.29"
 places = "4.1.0"
+junitKtx = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -43,6 +44,7 @@ gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hiltAndroid" }
 places = { module = "com.google.android.libraries.places:places", version.ref = "places" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
